--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
