--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 // my-v0-project/.env.local
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
-
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dohwmkapy
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=default_preset
 # NEXT_PUBLIC_API_URL=https://befashionweb25-production.up.railway.app/api
