--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "cookies-next": "^6.0.0",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
@@ -54,10 +54,10 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
-    "react": "^19",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
